Updated Employee Name and Title
Updated H2 from Team to Employee name and title.

--- a/artyllect/index.html
+++ b/artyllect/index.html
@@ -175,7 +175,7 @@
             </section>
             <section class="team main-wrapper">
                 <div class="vertical-align">
-                    <h2>Team</h2>
+                    <h2>Employee Name and Title</h2>
                     <ol class="team-container">
                         <li class="team-member">
                             <section class="card">
