Removed Employee: Pankaj Chauhan/Senior AEM Team Lead
Removed Employee: Pankaj Chauhan/Senior AEM Team Lead and Updated Page
name from Employee Name and Title to Team.

--- a/artyllect/index.html
+++ b/artyllect/index.html
@@ -175,7 +175,7 @@
             </section>
             <section class="team main-wrapper">
                 <div class="vertical-align">
-                    <h2>Employee Name and Title</h2>
+                    <h2>Team</h2>
                     <ol class="team-container">
                         <li class="team-member">
                             <section class="card">
@@ -219,17 +219,6 @@
                                 <div class="front">
                                     <img src="static/images/content/team/Chaudhari_Rahul.png"/>
                                 </div>    
-                            </section>
-                        </li>
-                        <li class="team-member">
-                            <section class="card">
-                                <div class="back">
-                                    <h3>Pankaj Chauhan</h3>
-                                    <p>Senior AEM Team Lead</p>
-                                </div>
-                                <div class="front">
-                                    <img src="static/images/content/team/Chauhan_Pankaj.png"/>
-                                </div>
                             </section>
                         </li>
                         <li class="team-member">
