--- a/artyllect/index.html
+++ b/artyllect/index.html
@@ -312,6 +312,8 @@
                         <li class="team-member">
                             <section class="card">
                                 <div class="back">
+                                    <h3>Sandipan Karmarkar</h3>
+                                    <p>Senior Adobe CQ/AEM Consultant</p>
                                 </div>
                                 <div class="front">
                                     <img src="static/images/content/team/Karmarkar_Sandipan.png"/>
