updated contactUs page with short name

--- a/artyllect/clients.html
+++ b/artyllect/clients.html
@@ -33,19 +33,19 @@
             <div class="vertical-align">
                 <ul class="main-nav">
                     <li>
-                        <a href="#">HOME</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>
-                        <a href="#">CLIENTS</a>
+                        <a href="clients.html">CLIENTS</a>
                     </li>
                     <li>
-                        <a href="#">TEAM</a>
+                        <a href="team.html">TEAM</a>
                     </li>
                     <li>
-                        <a href="#">COMMUNITY</a>
+                        <a href="community.html">COMMUNITY</a>
                     </li>
                     <li>
-                        <a href="#">CONTACT US</a>
+                        <a href="contactus.html">CONTACT US</a>
                     </li>
                 </ul>
                 <ul class="social-icons">
